# CG4002-AI

./: .gitignore  README.md  individual.md  main.py  pokemon_tts_generate.py  poster.html  pyproject.toml
code/: README.md
dashboard/: README.md  runtime.py  server.py
data/: Horizontal Swing.txt  Shaking fist (3 shakes).txt  augmented_imudata.csv  augmented_imudata_test.csv  augmented_imudata_train.csv  imudata.csv  mean.npy  resampled_imudata.csv  std.npy  voice_manifest.csv
ec2/: server.py
hardware/: gesture_cnn.cpp  gesture_cnn.h  gesture_cnn.xsa  gesture_cnn_tb.cpp  gesture_cnn_weights.h  typedefs.h  voice_cnn.cpp  voice_cnn_tb.cpp  voice_cnn_weights.h  voice_typedefs.h
hls/: gen_gesture_tb_cases.py  gen_voice_tb_cases.py  gesture_cnn.cpp  gesture_cnn_tb.cpp  gesture_tb_cases.h  voice_cnn.cpp  voice_cnn_python_ref.py  voice_cnn_tb.cpp  voice_cnn_weights.h  voice_tb_cases.h  voice_typedefs.h
legacy/: train_gesture_cnn_old.ipynb  train_voice_cnn_old.ipynb
notebooks/: gesture_cnn_weights.h  train_cnn_model.ipynb  train_gesture_cnn.ipynb  train_voice_cnn.ipynb
poster-assets/: block-diagram.mermaid  preview.html
report/: gesture_cnn_csynth.rpt  voice_cnn_csynth.rpt
test/: dual_cnn_test.py  gesture_preprocess.py  router.py  test.py  voice_preprocess.py  voice_test.py
tools/: README.md  build_gesture_dataset_from_sqlite.py  build_gesture_imudata_csv.py  build_voice_dataset.py  gen_gesture_tb_cases.py  gen_voice_tb_cases.py  gesture_feature_pipeline.py  import_gesture_packets.py  merge_gesture_readings.py  pokemon_tts_generate.py  run_voice_ablation.py  (+7 more)
(+179 files in other folders)
