[project]
name = "CG4002-AI"
version = "0.1.0"
description = "CG4002 AI — gesture & voice CNN training and deployment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.0",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "torch>=2.0",
    "ipykernel>=6.0",
    "requests>=2.33.1",
    "pydub>=0.25.1",
    "google-genai>=1.70.0",
]
